# facility-registry-geo-foundation

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
caches/: geocoding_cache.csv
config/: config.yaml
data/raw/: facilities_raw.csv
scripts/: 00_generate_raw_data.py  01_clean_normalize.py  02_optional_geocode.py  03_run_qaqc.py  04_export_outputs.py  05_make_static_map.py
src/facility_registry/: __init__.py  dedupe.py  export.py  geocode.py  io.py  mapping.py  normalize.py  qa.py
tests/: test_schema_and_dedupe.py
