[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "facility-registry-geo-foundation"
version = "0.1.0"
description = "Synthetic logistics facility registry pipeline with QA and mapping"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
